k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mock-server
  labels:
    name: mock-server
